# src/controllers/auth/login.js
@@ -1,4 +1,4 @@
-const { Unauthorized } = require('http-errors');
+const { Unauthorized, BadRequest } = require('http-errors');
 const { User } = require('../../models');
 const { authServices } = require('../../services');
 const bcrypt = require('bcrypt');
@@ -6,7 +6,9 @@ const { tokenGeneration } = require('../../helpers');
 
 const login = async (req, res) => {
   const { email, password } = req.body;
-
+  if (!email || !password) {
+    throw new BadRequest('Missing required field');
+  }
   const user = await User.findOne({ email });
 
   if (!user) {
